7.x-1.x dev

[#2255129] by wwalc: Introduced support for the codesnippet and mathjax plugins.
[#1762328] by wwalc: IMPORTANT: <code> tags are no longer protected by default.
[#1327898] by grasmash: Adding new ckeditor_security_filter_alter() hook.
[#2175565] by hswong3i: Download Library with ckeditor.make for Simple Profile Integration.
[#2249139] by wwalc: Use CKEditor 4.4.0 from CKEditor CDN (http://cdn.ckeditor.com) by default.
[#1370894] by uberhacker, mgifford, Devin Carlson: Conditionally load ckeditor.css only when necessary.
[#1960808] by valkum, wwalc: Avoid using arg() in code.
[#1914496] by Danylo Dragan: Drush integration code doesn't respect --skip option.
[#2085245] by jlyon: Fix theme path displayed on Edit CKEditor Profile page.
[#2123669] by wwalc: Better support for loading custom CKEditor skins.
[#1914904] by rooby: Media plugin not working in IE 9 and below.
[#2244835] by loopduplicate: CKEditor is not visible in Panels IPE in IE11.
[#2244817] by wwalc: CKEditor from CDN does not load in Panels IPE when a form is loaded in a popup for the first time.
[#2244387] by wwalc: 3rd party plugins with large icons break the toolbar configurator.
[#2013657] by pfrenssen: Allow other modules to alter the default settings.
[#2236367] by greenSkin: Add $conf array to ckeditor_settings alter hook.
[#1452544] by covenantd, RedRat: DrupalPageBreak button not visible when using Smart Paging module.
[#2231005] by ChinggizKhan: Only set "window.CKEDITOR_BASEPATH" when it isnt already set.
[#1659576] by ChinggizKhan: Text of "Switch to plain text editor" link doesn't toggle.
[#2043365] by Erik Erskine, Danny_Joris: CKEditor profile exported as feature with filter format does not import properly.
[#2234971] by wwalc: Adjust the default toolbars.
[#2234967] by wwalc: Add support for loading CKEditor from remote URL.
[#2234943] by wwalc: Use the moono icons in the administration area.
[#2127467] by wwalc: Support Pantheon Live Environment.